# finance-manager

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_baseline.py  002_create_finance_schema.py  003_create_tables.py  004_create_classification_tables.py  005_add_category_commitment_fields.py  006_create_rule_proposals.py  007_create_refinement_sessions.py  008_add_classification_tracking.py
apps/api/scripts/sql/: seed_categories.sql
apps/api/src/finance_api/: __init__.py  main.py
apps/api/src/finance_api/core/: __init__.py  config.py
apps/api/src/finance_api/db/: __init__.py  base.py  engine.py  session.py
apps/api/src/finance_api/models/: __init__.py  bank_session.py  category.py  category_evidence.py  classification_rule.py  email_account.py  online_purchase.py  refinement_session.py  rule_proposal.py  session_message.py  session_rule_proposal.py  transaction.py  transaction_category.py
apps/api/src/finance_api/repositories/: __init__.py  category_evidence_repository.py  (+5 more)
apps/api/tests/: conftest.py  test_main.py
apps/api/tests/integration/: __init__.py  test_category_repository.py  test_classification_pipeline.py  test_models.py  test_rule_discovery_pipeline.py
apps/api/tests/models/: test_bank_session.py  test_category.py  test_category_evidence.py  test_classification_rule.py  test_email_account.py  test_online_purchase.py  test_rule_proposal.py  test_transaction.py  test_transaction_category.py
apps/api/tests/repositories/: test_category_evidence_repository.py  test_category_repository.py  test_classification_rule_repository.py  test_email_account_repository.py  test_rule_proposal_repository.py
apps/api/tests/routers/: test_refinement.py
apps/api/tests/scripts/: test_seed_categories.py
apps/api/tests/services/: test_ai_disambiguation_service.py  test_category_mapping_service.py  test_classification_orchestrator.py  test_email_search_service.py  test_high_frequency_analyzer.py  test_receipt_extraction_service.py  test_rule_discovery_service.py  test_rule_validation_service.py  test_rules_classification_service.py  test_transaction_clustering_service.py
(+90 files in other folders)
